# pybind11_eigen

./: .gitignore  Dockerfile  README.md
docker/: Dockerfile
docker/envs/: py3.10.yml  py3.11.yml  py3.9.yml
include/: advancedRecon.h
python_project/: test_wrapper.py
src/: CMakeLists.txt  CMakePythonWrappers.cmake  main.cpp
src/recon/: CMakeLists.txt  advancedRecon.cpp  advancedRecon_py.cpp
